test/error/iocheck/err1.rzy
// Error: response is not allowed to output

component
  Err1
    response what():R{0,100};
    signal   event();
      
  implementation elementary
    
    response what():R{0,100}
      event();
      return 0;
    end
    
  end

